[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Helmet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Greaves.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/ChestPlate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Shield.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Boots.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Sword.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/ShopMenu.gd" type="Script" id=7]
[ext_resource path="res://Assets/DynamicFonts/MineTTF_8_whtie_FixedToCenter.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/img/GoldCoin.png" type="Texture" id=9]

[node name="Shop" type="Control"]
margin_right = 240.0
margin_bottom = 135.0
script = ExtResource( 7 )

[node name="Window" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 128.0
color = Color( 0, 0, 0, 0.498039 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 56.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 120.0
tabs_visible = false

[node name="ForgeTab" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
scrolling_enabled = false

[node name="HelmetButton" type="Button" parent="TabContainer/ForgeTab"]
anchor_left = -0.375
anchor_top = -0.261
anchor_right = -0.375
anchor_bottom = -0.261
margin_left = 174.0
margin_top = 16.012
margin_right = 198.0
margin_bottom = 40.012
action_mode = 0
flat = true

[node name="Helmet" parent="TabContainer/ForgeTab/HelmetButton" instance=ExtResource( 1 )]
position = Vector2( 12, 12 )

[node name="ChestPlateButton" type="Button" parent="TabContainer/ForgeTab"]
anchor_left = -0.375
anchor_top = -0.261
anchor_right = -0.375
anchor_bottom = -0.261
margin_left = 174.0
margin_top = 43.012
margin_right = 198.0
margin_bottom = 67.012
action_mode = 0
flat = true

[node name="ChestPlate" parent="TabContainer/ForgeTab/ChestPlateButton" instance=ExtResource( 3 )]
position = Vector2( 12, 12 )

[node name="GreavesButton" type="Button" parent="TabContainer/ForgeTab"]
anchor_left = -0.375
anchor_top = -0.261
anchor_right = -0.375
anchor_bottom = -0.261
margin_left = 174.0
margin_top = 70.012
margin_right = 198.0
margin_bottom = 94.012
action_mode = 0
flat = true

[node name="Greaves" parent="TabContainer/ForgeTab/GreavesButton" instance=ExtResource( 2 )]
position = Vector2( 12, 12 )

[node name="BootsButton" type="Button" parent="TabContainer/ForgeTab"]
anchor_left = -0.375
anchor_top = -0.261
anchor_right = -0.375
anchor_bottom = -0.261
margin_left = 174.0
margin_top = 97.012
margin_right = 198.0
margin_bottom = 121.012
action_mode = 0
flat = true

[node name="Boots" parent="TabContainer/ForgeTab/BootsButton" instance=ExtResource( 5 )]
position = Vector2( 12, 12 )

[node name="SwordButton" type="Button" parent="TabContainer/ForgeTab"]
anchor_left = -0.375
anchor_top = -0.261
anchor_right = -0.375
anchor_bottom = -0.261
margin_left = 147.0
margin_top = 43.012
margin_right = 171.0
margin_bottom = 67.012
action_mode = 0
flat = true

[node name="Sword" parent="TabContainer/ForgeTab/SwordButton" instance=ExtResource( 6 )]
position = Vector2( 12, 12 )

[node name="ShieldButton" type="Button" parent="TabContainer/ForgeTab"]
anchor_left = -0.375
anchor_top = -0.261
anchor_right = -0.375
anchor_bottom = -0.261
margin_left = 201.0
margin_top = 43.012
margin_right = 225.0
margin_bottom = 67.012
action_mode = 0
flat = true

[node name="Shield" parent="TabContainer/ForgeTab/ShieldButton" instance=ExtResource( 4 )]
position = Vector2( 12, 12 )

[node name="SelectRect" type="ColorRect" parent="TabContainer/ForgeTab"]
anchor_left = -0.375
anchor_top = -0.261
anchor_right = -0.375
anchor_bottom = -0.261
margin_left = 64.0
margin_top = 40.012
margin_right = 88.0
margin_bottom = 64.012
color = Color( 0, 0, 0, 0.741176 )

[node name="ItemShow" type="Sprite" parent="TabContainer/ForgeTab/SelectRect"]
position = Vector2( 12, 12 )

[node name="UpgradeButton" type="Button" parent="TabContainer/ForgeTab"]
anchor_left = -0.375
anchor_top = -0.261
anchor_right = -0.375
anchor_bottom = -0.261
margin_left = 96.0
margin_top = 96.012
margin_right = 144.0
margin_bottom = 112.012
custom_fonts/font = ExtResource( 8 )
text = "UPGRADE"

[node name="InfoRect" type="ColorRect" parent="TabContainer/ForgeTab"]
margin_left = 36.0
margin_right = 84.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.741176 )

[node name="UpgradeName" type="Label" parent="TabContainer/ForgeTab/InfoRect"]
margin_left = 4.0
margin_top = 3.0
margin_right = 44.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1

[node name="UpgradeStat" type="Label" parent="TabContainer/ForgeTab/InfoRect"]
margin_left = 4.0
margin_top = 20.0
margin_right = 44.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1

[node name="UpgradePrice" type="Label" parent="TabContainer/ForgeTab/InfoRect"]
margin_left = 4.0
margin_top = 44.0
margin_right = 44.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1

[node name="GoldContainer" type="Control" parent="TabContainer/ForgeTab"]
margin_left = 14.0
margin_top = 1.0
margin_right = 26.0
margin_bottom = 6.0
size_flags_horizontal = 15
size_flags_vertical = 15
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="TabContainer/ForgeTab/GoldContainer"]
position = Vector2( -6, 3 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="TabContainer/ForgeTab/GoldContainer"]
margin_top = -2.0
margin_right = 20.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 8 )
text = "0"
valign = 1

[node name="PlayerStats" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="StatsLabel" type="Label" parent="TabContainer/PlayerStats"]
margin_right = 159.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 8 )
autowrap = true
clip_text = true

[node name="ForgeButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 8 )
text = "Forge"

[node name="StatsButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 40.0
margin_right = 48.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 8 )
text = "Stats"

[node name="ExitButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 48.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 8 )
text = "Exit"

[connection signal="pressed" from="TabContainer/ForgeTab/HelmetButton" to="." method="_on_HelmetButton_pressed"]
[connection signal="pressed" from="TabContainer/ForgeTab/ChestPlateButton" to="." method="_on_ChestPlateButton_pressed"]
[connection signal="pressed" from="TabContainer/ForgeTab/GreavesButton" to="." method="_on_GreavesButton_pressed"]
[connection signal="pressed" from="TabContainer/ForgeTab/BootsButton" to="." method="_on_BootsButton_pressed"]
[connection signal="pressed" from="TabContainer/ForgeTab/SwordButton" to="." method="_on_SwordButton_pressed"]
[connection signal="pressed" from="TabContainer/ForgeTab/ShieldButton" to="." method="_on_ShieldButton_pressed"]
[connection signal="pressed" from="TabContainer/ForgeTab/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
[connection signal="pressed" from="ForgeButton" to="." method="_on_ForgeButton_pressed"]
[connection signal="pressed" from="StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
